--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.3.3
 Flask-SocketIO==5.3.6
-eventlet==0.33.3
+gevent==24.2.1
+gevent-websocket==0.10.1
 email-validator==2.0.0
 python-dotenv==1.0.0
